--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@
                             </div>
                             <div class="languages-cards sr-l">
                                 <div class="skill-card">
-                                    <img src="../images/skills/html.png" width="50px" height="50px" alt="">
+                                    <img src="./images/skills/html.png" width="50px" height="50px" alt="">
                                 </div>
                                 <div class="skill-card">
-                                    <img src="../images/skills/css.png" width="50px" height="50px" alt="">
+                                    <img src="./images/skills/css.png" width="50px" height="50px" alt="">
                                 </div>
                                 <div class="skill-card">
-                                    <img src="../images/skills/js.png" width="50px" height="50px" alt="">
+                                    <img src="./images/skills/js.png" width="50px" height="50px" alt="">
                                 </div>
                                 <div class="skill-card">
-                                    <img src="../images/skills/sass.png" width="50px" height="50px" alt="">
+                                    <img src="./images/skills/sass.png" width="50px" height="50px" alt="">
                                 </div>
 
                             </div>
@@ -146,19 +146,19 @@
                             </div>
                             <div class="languages-cards sr-l">
                                 <div class="skill-card">
-                                    <img src="../images/skills/react.png" width="50px" height="50px" alt="">
+                                    <img src="./images/skills/react.png" width="50px" height="50px" alt="">
                                 </div>
                                 <div class="skill-card">
-                                    <img src="../images/skills/bootstrap.png" width="50px" height="50px" alt="">
+                                    <img src="./images/skills/bootstrap.png" width="50px" height="50px" alt="">
                                 </div>
                                 <div class="skill-card">
-                                    <img src="../images/skills/tailwind.png" width="50px" height="50px" alt="">
+                                    <img src="./images/skills/tailwind.png" width="50px" height="50px" alt="">
                                 </div>
                                 <div class="skill-card">
-                                    <img src="../images/skills/nodejs.png" width="50px" height="50px" alt="">
+                                    <img src="./images/skills/nodejs.png" width="50px" height="50px" alt="">
                                 </div>
                                 <div class="skill-card">
-                                    <img src="../images/skills/ex.png" width="50px" height="50px" alt="">
+                                    <img src="./images/skills/ex.png" width="50px" height="50px" alt="">
                                 </div>
 
                             </div>
@@ -169,19 +169,19 @@
                             </div>
                             <div class="languages-cards sr-l">
                                 <div class="skill-card">
-                                    <img src="../images/skills/figma.png" width="45px" height="50px" alt="">
+                                    <img src="./images/skills/figma.png" width="45px" height="50px" alt="">
                                 </div>
                                 <div class="skill-card">
-                                    <img src="../images/skills/xd.png" width="50px" height="50px" alt="">
+                                    <img src="./images/skills/xd.png" width="50px" height="50px" alt="">
                                 </div>
                                 <div class="skill-card">
-                                    <img src="../images/skills/ps.png" width="50px" height="50px" alt="">
+                                    <img src="./images/skills/ps.png" width="50px" height="50px" alt="">
                                 </div>
                                 <div class="skill-card">
-                                    <img src="../images/skills/github.png" width="50px" height="50px" alt="">
+                                    <img src="./images/skills/github.png" width="50px" height="50px" alt="">
                                 </div>
                                 <div class="skill-card">
-                                    <img src="../images/skills/git.png" width="50px" height="50px" alt="">
+                                    <img src="./images/skills/git.png" width="50px" height="50px" alt="">
                                 </div>
 
                             </div>
@@ -257,27 +257,27 @@
             </div>
             <div class="portfolio-container sr-b">
                 <div class="portfolio-container-items">
-                    <img src="../images/porfolio/Porfolio1.png" alt="">
+                    <img src="./images/porfolio/Porfolio1.png" alt="">
                     <button><a href="">Live Demo</a></button>
                 </div>
                 <div class="portfolio-container-items">
-                    <img src="../images/porfolio/food.jpg" alt="">
+                    <img src="./images/porfolio/food.jpg" alt="">
                     <button><a href="">Live Demo</a></button>
                 </div>
                 <div class="portfolio-container-items">
-                    <img src="../images/porfolio/to-do.png" alt="">
+                    <img src="./images/porfolio/to-do.png" alt="">
                     <button><a href="">Live Demo</a></button>
                 </div>
                 <div class="portfolio-container-items">
-                    <img src="../images/porfolio/calculator.png" alt="">
+                    <img src="./images/porfolio/calculator.png" alt="">
                     <button><a href="">Live Demo</a></button>
                 </div>
                 <div class="portfolio-container-items">
-                    <img src="../images/porfolio/weather.png" alt="">
+                    <img src="./images/porfolio/weather.png" alt="">
                     <button><a href="">Live Demo</a></button>
                 </div>
                 <div class="portfolio-container-items">
-                    <img src="../images/porfolio/shoes.png" alt="">
+                    <img src="./images/porfolio/shoes.png" alt="">
                     <button><a href="">Live Demo</a></button>
                 </div>
             </div>
